Revert "второй вариант"

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 <body>
   <div class="container">
-    <header class="header">
-      <div class="fotoCont">
+    <header class="cabecalho">
+      <div class="hdrCont">
         <div class="menulogo">
-          <img class="weblogo" width="80" height="80" src="images/desktop/3333331111111.svg" alt="Aalam">
+          <img class="looplogo" width="80" height="80" src="images/desktop/3333331111111.svg" alt="Aalam">
           <img class="menu mobim" src="images/icon-hamburger.svg" alt="menu">
         <ul class="menu menud font2">
           <li><a href="https://www.instagram.com/aalam_team/?hl=ru">Instagram</a></li>
@@ -42,11 +42,11 @@
         </div>
         <div class="btnnCrea">
           <h1 class="crea font2">OUR TEAM</h1>
-         
+          <a href="https://taplink.cc/aalam_team"><button type="button" class="bttnDesk font1">SEE ALL</button></a>
         </div>     
         <div class="mainGrid">
           <a href="https://www.instagram.com/bolotbekov_max/?hl=ru">
-            <div class="box font2 maks"><div class="grad">
+            <div class="box font2 deep"><div class="grad">
               <p>MAKSAT ASANBEKOV</p>
             </div></div>
           </a>
@@ -56,45 +56,45 @@
             </div></div>
           </a>
           <a href="https://www.instagram.com/zhiideshka/?hl=ru">
-            <div class="box font2 jide"><div class="grad">
+            <div class="box font2 night"><div class="grad">
               <p>ZHIIDEGUL OMURALIEVA</p>
             </div></div>
           </a>
           <a href="https://www.instagram.com/lizich_88/?hl=ru">
-            <div class="box font2 elzada"><div class="grad">
+            <div class="box font2 soccer"><div class="grad">
               <p>ELZADA SHADYBEKOVA</p>
             </div></div>
           </a>
           <a href="https://instagram.com/1keneshbekov?utm_medium=copy_link">
-            <div class="box font2 aziz"><div class="grad">
+            <div class="box font2 tgrid"><div class="grad">
               <p>ABDULAZIZ KENESHBEKOV</p>
             </div></div>
           </a>
           <a href="https://www.instagram.com/dvnchki/?hl=ru">
-            <div class="box font2 elnura"><div class="grad">
+            <div class="box font2 fuav"><div class="grad">
               <p>ELNURA SARKOBENOVA</p>
             </div></div>
           </a>
           <a href="https://www.instagram.com/urmat.jorobaev/?hl=ru">
-            <div class="box font2 urmat"><div class="grad">
+            <div class="box font2 pocket"><div class="grad">
               <p>URMAT JOROBAEV</p>
             </div></div>
           </a>
           <a href="https://www.instagram.com/janat_kylychev/?hl=ru">
-            <div class="box font2 janat"><div class="grad">
+            <div class="box font2 tcuri"><div class="grad">
               <p>JANAT KYLYCHEV   /   SAULE KUBANYCHBEKOVA</p>
             </div></div>
           </a>
           <a href="https://www.instagram.com/yrysbu/?hl=ru">
-            <div class="box font2 yrys"><div class="grad">
+            <div class="box font2 fish"><div class="grad">
               <p>YRYSBU NASYRDINOVA</p>
             </div></div>
           </a>
         </div>
         <a href="https://taplink.cc/aalam_team"><button type="button" class="bttnDesk font1">SEE ALL</button></a> 
       </section>
-      <footer class="footer font2">
-        <div class="icon1">
+      <footer class="rodape font2">
+        <div class="roda1">
           <img width="60" height="60" src="images/desktop/3333331111111.svg" alt="Aalam class="logord">
           <ul>
             <li><a href="#">Instagram</a></li>
@@ -104,14 +104,14 @@
             <li><a href="https://trello.com/b/OQ7s9Kyb/aalam-team">Trello</a></li>
           </ul>
         </div>
-        <div class="icon2">
-          <div class="iconitems">
+        <div class="roda2">
+          <div class="sn">
             <a href="#"><img src="images/icon-facebook.svg"></a>
             <a href="#"><img src="images/icon-twitter.svg"></a>
             <a href="#"><img src="images/icon-pinterest.svg"></a>
             <a href="#"><img src="images/icon-instagram.svg"></a>
           </div>
-          <div class="copyright">
+          <div class="rodColor">
             <p>© 2021 Aalam Team. All rights reserved.</p>
             <div class="attribution">
               Challenge by <a href="https://jyldyz.com/" target="_blank">JYLDYZ ACADEMY</a>.
